fixed JS code to dark mode

--- a/style.scss
+++ b/style.scss
@@ -8,9 +8,9 @@ html {
   }
 
   :root {
-    --dark-background: #18191a;
-    --dark-textColor: #b0946c;
-    --dark-cardBackground: #242526;
+    --background-color: #18191a;
+    --text-color: #b0946c;
+    --main-background: #242526;
   }
 
   @mixin fontStyles {
@@ -18,22 +18,19 @@ html {
     font-weight: 500;
     margin: 0;
     padding: 0;
-    color: var(--dark-textColor);
+    color: var(--text-color);
     
   }
-  .body--js {
-    background-color: #fff;
-    color: #fff;
-    }
+  
   
   .body {
     height: 100vh;
-    background-color: #18191a;
+    background-color: var(--background-color);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: var(--dark-textColor);
+    color: var(--text-color);
     position: relative;
     margin: 0;
 
@@ -51,11 +48,11 @@ html {
     "aside . article";
     grid-template-columns: 150px 8px 1fr;
     column-gap: 8px;
-    background-color: var(--dark-cardBackground);
+    background-color: var(--main-background);
     width: 824px;
     max-height: 780px;
     padding: 24px;
-    border: solid 2px var(--dark-cardBackground);
+    border: solid 2px var(--main-background);
     border-radius: 8px;
     
   }
@@ -79,7 +76,7 @@ html {
     align-items: center;
     &__name  {
       margin: 0;
-      color: var(--dark-textColor);
+      color: var(--text-color);
     }
     &__position {
       margin: 0;
@@ -113,7 +110,7 @@ html {
 
   .me {
     &__heading {
-      color: var(--dark-textColor);
+      color: var(--text-color);
       margin: 0;
     }
   }
@@ -146,8 +143,8 @@ html {
 
   .logo:hover {
     transform: scale(1.2);
-    background-color:var(--dark-textColor);
-    border: solid 1px var(--dark-textColor);
+    background-color:var(--text-color);
+    border: solid 1px var(--text-color);
     border-radius: 4px;
   }
 
